Added support for Collections.empty...() to IsUnmodifiable.